Add maven plugin

--- a/software/_project-build/maven/2.pom.md
+++ b/software/_project-build/maven/2.pom.md
@@ -91,7 +91,20 @@ Package `src/main/resources` to `xxx.war/`
                 <target>${project.java.version}</target>
             </configuration>
         </plugin>
-
+        
+        <!-- maven package jar plugin -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>com.taogen.example.App</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+        </plugin>
+        
         <!-- maven package war plugin -->
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
