Update maven plugin

--- a/software/_project-build/maven/2.pom.md
+++ b/software/_project-build/maven/2.pom.md
@@ -84,6 +84,7 @@ Package `src/main/resources` to `xxx.war/`
     <plugins>
         <!-- maven compile plugin -->
         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.5.1</version>
             <configuration>
@@ -96,6 +97,7 @@ Package `src/main/resources` to `xxx.war/`
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
+            <version>3.2.0</version>
             <configuration>
                 <archive>
                     <manifest>
