--- a/software/_project-build/maven/2.pom.md
+++ b/software/_project-build/maven/2.pom.md
@@ -93,34 +93,29 @@ Package `src/main/resources` to `xxx.war/`
             </configuration>
         </plugin>
         
-        <!-- maven package jar plugin -->
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>3.2.0</version>
-            <configuration>
-                <archive>
-                    <manifest>
-                        <mainClass>com.taogen.example.App</mainClass>
-                    </manifest>
-                </archive>
-            </configuration>
-        </plugin>
-        
-        <!-- maven package war plugin -->
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-war-plugin</artifactId>
-            <version>3.2.3</version>
-            <configuration>
-                <failOnMissingWebXml>false</failOnMissingWebXml>
-                <webResources>
-                    <!-- pacakge src/main/resources/ files into war root directory -->
-                    <resource>
-                        <!-- this is relative to the pom.xml directory -->
-                        <directory>src/main/resources</directory>
-                    </resource>
-                    <!-- package local jar into war 
+	</plugins>
+</build>
+```
+
+### Plugins
+
+package to WAR plugin
+
+```xml
+<!-- maven package war plugin -->
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>3.2.3</version>
+    <configuration>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
+        <webResources>
+            <!-- pacakge src/main/resources/ files into war root directory -->
+            <resource>
+                <!-- this is relative to the pom.xml directory -->
+                <directory>src/main/resources</directory>
+            </resource>
+            <!-- package local jar into war 
                     <resource>     
                       <directory>${project.basedir}/libs</directory>
                       <targetPath>WEB-INF/lib</targetPath>
@@ -128,69 +123,141 @@ Package `src/main/resources` to `xxx.war/`
                           <include>**/*.jar</include>
                       </includes>
                    </resource>-->
-                </webResources>
-            </configuration>
-        </plugin>
+        </webResources>
+    </configuration>
+</plugin>
+```
 
-        <!-- Tomcat Maven plugin -->
-        <plugin>
-            <groupId>org.apache.tomcat.maven</groupId>
-            <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>${tomcat.plugin.version}</version> <!-- 2.2 -->
+Package to JAR plugin
+
+```xml
+<!-- maven package jar plugin -->
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-jar-plugin</artifactId>
+    <version>3.2.0</version>
+    <configuration>
+        <archive>
+            <manifest>
+                <mainClass>com.taogen.example.App</mainClass>
+            </manifest>
+        </archive>
+    </configuration>
+</plugin>
+```
+
+Package to JAR (include dependencies lib) plugin
+
+```xml
+<!-- maven package jar with dependencies lib -->
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-dependency-plugin</artifactId>
+    <version>3.1.1</version>
+    <executions>
+        <execution>
+            <id>copy-dependencies</id>
+            <phase>prepare-package</phase>
+            <goals>
+                <goal>copy-dependencies</goal>
+            </goals>
             <configuration>
-                <port>${tomcat.plugin.config.port}</port>
-                <path>${tomcat.plugin.config.path}</path>
-                <contextReloadable>true</contextReloadable>
+                <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                <overWriteReleases>false</overWriteReleases>
+                <overWriteSnapshots>false</overWriteSnapshots>
+                <overWriteIfNewer>true</overWriteIfNewer>
             </configuration>
-        </plugin>
-        
-        <!-- Jetty Maven Plugin -->
-        <plugin>
-        	<groupId>org.eclipse.jetty</groupId>
-        	<artifactId>jetty-maven-plugin</artifactId>
-        	<version>9.4.26.v20200117</version>
-            <configuration>
-                <webApp>
-                    <httpConnector>
-                    	<port>${jetty.plugin.config.port}</port>
-                    </httpConnector>
-                	<contextPath>${jetty.plugin.config.contextPath}</contextPath>
-                </webApp>
-            </configuration>
-        </plugin>
-        
-        <!-- Spring Boot plugin -->
-        <plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>repackage</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-        
-        <!-- MyBatis Generator Plugin -->
-		<plugin>
-			<groupId>org.mybatis.generator</groupId>
-			<artifactId>mybatis-generator-maven-plugin</artifactId>
-			<version>1.3.0</version>
-			<configuration>
-				<verbose>true</verbose>
-				<overwrite>true</overwrite>
-			</configuration>
-			<executions>
-				<execution>
-					<id>Generate MyBatis Artifacts</id>
-					<goals>
-						<goal>generate</goal>
-					</goals>
-				</execution>
-			</executions>
-		</plugin>
-	</plugins>
-</build>
+        </execution>
+    </executions>
+</plugin>
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-jar-plugin</artifactId>
+    <version>3.2.0</version>
+    <configuration>
+        <archive>
+            <manifest>
+                <addClasspath>true</addClasspath>
+                <classpathPrefix>lib/</classpathPrefix>
+                <mainClass>${mvn.jar.plugin.mainclass}</mainClass>
+            </manifest>
+        </archive>
+    </configuration>
+</plugin>
+```
+
+Apache Tomcat Plugin
+
+```xml
+<!-- Tomcat Maven plugin -->
+<plugin>
+    <groupId>org.apache.tomcat.maven</groupId>
+    <artifactId>tomcat7-maven-plugin</artifactId>
+    <version>${tomcat.plugin.version}</version> <!-- 2.2 -->
+    <configuration>
+        <port>${tomcat.plugin.config.port}</port>
+        <path>${tomcat.plugin.config.path}</path>
+        <contextReloadable>true</contextReloadable>
+    </configuration>
+</plugin>
+```
+
+Jetty Plugin
+
+```xml
+<!-- Jetty Maven Plugin -->
+<plugin>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-maven-plugin</artifactId>
+    <version>9.4.26.v20200117</version>
+    <configuration>
+        <webApp>
+            <httpConnector>
+                <port>${jetty.plugin.config.port}</port>
+            </httpConnector>
+            <contextPath>${jetty.plugin.config.contextPath}</contextPath>
+        </webApp>
+    </configuration>
+</plugin>
+```
+
+Spring Boot Plugin
+
+```xml
+<!-- Spring Boot plugin -->
+<plugin>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-maven-plugin</artifactId>
+    <executions>
+        <execution>
+            <goals>
+                <goal>repackage</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
+```
+
+MyBatis Plugin
+
+```xml
+<!-- MyBatis Generator Plugin -->
+<plugin>
+    <groupId>org.mybatis.generator</groupId>
+    <artifactId>mybatis-generator-maven-plugin</artifactId>
+    <version>1.3.0</version>
+    <configuration>
+        <verbose>true</verbose>
+        <overwrite>true</overwrite>
+    </configuration>
+    <executions>
+        <execution>
+            <id>Generate MyBatis Artifacts</id>
+            <goals>
+                <goal>generate</goal>
+            </goals>
+        </execution>
+    </executions>
+</plugin>
 ```
 
