--- a/software/_project-build/maven/2.pom.md
+++ b/software/_project-build/maven/2.pom.md
@@ -92,12 +92,10 @@ Package `src/main/resources` to `xxx.war/`
                 <target>${project.java.version}</target>
             </configuration>
         </plugin>
-        
+        <!-- ... -->
 	</plugins>
 </build>
 ```
-
-### Plugins
 
 package to WAR plugin
 
@@ -139,6 +137,7 @@ Package to JAR plugin
     <configuration>
         <archive>
             <manifest>
+                <!-- specify the main class -->
                 <mainClass>com.taogen.example.App</mainClass>
             </manifest>
         </archive>
