Add maven plugin

--- a/software/_project-build/maven/2.pom.md
+++ b/software/_project-build/maven/2.pom.md
@@ -54,6 +54,14 @@ scope: provided
 
 ## Build
 
+```xml
+<!-- directories -->
+<sourceDirectory>src/main/java</sourceDirectory>
+<testSourceDirectory>src/test/java</testSourceDirectory>
+```
+
+
+
 ### Resources
 
 Package files to `xxx.war/WEB-INF/class`
@@ -75,29 +83,22 @@ Package files to `xxx.war/WEB-INF/class`
 
 ### Plugins
 
-Package `src/main/resources` to `xxx.war/`
+`maven-compiler-plugin`: Specify java version to compile java source code
 
 ```xml
-<build>
-    <sourceDirectory>src/main/java</sourceDirectory>
-    <testSourceDirectory>src/test/java</testSourceDirectory>
-    <plugins>
-        <!-- maven compile plugin -->
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.5.1</version>
-            <configuration>
-                <source>${project.java.version}</source>
-                <target>${project.java.version}</target>
-            </configuration>
-        </plugin>
-        <!-- ... -->
-	</plugins>
-</build>
+<!-- maven compile plugin -->
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.5.1</version>
+    <configuration>
+        <source>${project.java.version}</source>
+        <target>${project.java.version}</target>
+    </configuration>
+</plugin>
 ```
 
-package to WAR plugin
+`maven-war-plugin`: package project to WAR plugin
 
 ```xml
 <!-- maven package war plugin -->
@@ -126,7 +127,7 @@ package to WAR plugin
 </plugin>
 ```
 
-Package to JAR plugin
+`maven-jar-plugin`: Package project to JAR plugin
 
 ```xml
 <!-- maven package jar plugin -->
@@ -145,7 +146,35 @@ Package to JAR plugin
 </plugin>
 ```
 
-Package to JAR (include dependencies lib) plugin
+`maven-assembly-plugin`: Package project to executable JAR by specify main class and including dependencies into single file
+
+```xml
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <version>3.1.0</version>
+    <executions>
+        <execution>
+            <phase>package</phase>
+            <goals>
+                <goal>single</goal>
+            </goals>
+        </execution>
+    </executions>
+    <configuration>
+        <archive>
+            <manifest>
+                <mainClass>${mvn.jar.plugin.mainclass}</mainClass>
+            </manifest>
+        </archive>
+        <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+    </configuration>
+</plugin>
+```
+
+`maven-dependency-plugin`: Package project to executable JAR and including dependencies by reference lib directory
 
 ```xml
 <!-- maven package jar with dependencies lib -->
@@ -185,7 +214,7 @@ Package to JAR (include dependencies lib) plugin
 </plugin>
 ```
 
-Apache Tomcat Plugin
+`tomcat7-maven-plugin`: Apache Tomcat Plugin
 
 ```xml
 <!-- Tomcat Maven plugin -->
@@ -201,7 +230,7 @@ Apache Tomcat Plugin
 </plugin>
 ```
 
-Jetty Plugin
+`jetty-maven-plugin`: Jetty Plugin
 
 ```xml
 <!-- Jetty Maven Plugin -->
@@ -220,7 +249,7 @@ Jetty Plugin
 </plugin>
 ```
 
-Spring Boot Plugin
+`spring-boot-maven-plugin`: Spring Boot Plugin
 
 ```xml
 <!-- Spring Boot plugin -->
@@ -237,7 +266,7 @@ Spring Boot Plugin
 </plugin>
 ```
 
-MyBatis Plugin
+`mybatis-generator-maven-plugin`: MyBatis Plugin
 
 ```xml
 <!-- MyBatis Generator Plugin -->
