Add pom configurations

--- a/software/apache-maven/2.pom.md
+++ b/software/apache-maven/2.pom.md
@@ -55,9 +55,19 @@ scope: provided
 ## Build
 
 ```xml
-<!-- directories -->
-<sourceDirectory>src/main/java</sourceDirectory>
-<testSourceDirectory>src/test/java</testSourceDirectory>
+<build>
+    <!-- directories -->
+    <sourceDirectory>src/main/java</sourceDirectory>
+    <testSourceDirectory>src/test/java</testSourceDirectory>
+</build>
+```
+
+Specify package file name
+
+```xml
+<build>
+	<finalName>plantuml-generator</finalName>
+</build>
 ```
 
 
