--- a/software/apache-maven/2.pom.md
+++ b/software/apache-maven/2.pom.md
@@ -104,6 +104,7 @@ Package files to `xxx.war/WEB-INF/class`
     <configuration>
         <source>${project.java.version}</source>
         <target>${project.java.version}</target>
+        <encoding>UTF-8</encoding>
     </configuration>
 </plugin>
 ```
