--- a/software/apache-maven/2.pom.md
+++ b/software/apache-maven/2.pom.md
@@ -21,6 +21,27 @@ Content
 </properties>
 ```
 
+```xml
+<properties>
+    <!-- maven properties -->
+    <project.build.sourceEncoding>${project.charset}</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>${project.charset}</project.reporting.outputEncoding>
+    <maven.compiler.target>${project.java.version}</maven.compiler.target>
+    <maven.compiler.source>${project.java.version}</maven.compiler.source>
+    <!-- end -->
+    
+    <!-- project properties -->
+    <project.java.version>1.8</project.java.version>
+    <project.charset>UTF-8</project.charset>
+    <!-- end -->
+    
+    <!-- dependencies version -->
+    <junit.version>4.12</junit.version>
+    <log4j.version>2.8.2</log4j.version>
+    <!-- end -->
+</properties>
+```
+
 
 
 ## Dependencies
@@ -104,7 +125,7 @@ Package files to `xxx.war/WEB-INF/class`
     <configuration>
         <source>${project.java.version}</source>
         <target>${project.java.version}</target>
-        <encoding>UTF-8</encoding>
+        <encoding>${project.charset}</encoding>
     </configuration>
 </plugin>
 ```
