--- a/software/apache-maven/2.pom.md
+++ b/software/apache-maven/2.pom.md
@@ -42,6 +42,23 @@ Content
 </properties>
 ```
 
+## Repositories
+
+```xml
+<repositories>
+    <repository>
+      <id>alimaven</id>
+      <name>aliyun maven</name>
+      <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+    </repository>
+    <repository>
+      <id>central</id>
+      <name>maven central</name>
+      <url>https://repo1.maven.org/maven2/</url>
+    </repository>
+</repositories>
+```
+
 
 
 ## Dependencies
