Add content of tomcat plugin

--- a/software/apache-maven/2.pom.md
+++ b/software/apache-maven/2.pom.md
@@ -266,6 +266,16 @@ Package files to `xxx.war/WEB-INF/class`
 `tomcat7-maven-plugin`: Apache Tomcat Plugin
 
 ```xml
+<properties>
+    ...
+    <!-- tomcat 7 plugin -->
+    <tomcat.plugin.version>2.2</tomcat.plugin.version>
+    <tomcat.plugin.config.port>80</tomcat.plugin.config.port>
+    <tomcat.plugin.config.path>/myapp</tomcat.plugin.config.path>
+</properties>
+```
+
+```xml
 <!-- Tomcat Maven plugin -->
 <plugin>
     <groupId>org.apache.tomcat.maven</groupId>
